# gitty-gitty

./: .gitignore  AUTHORS  Backlog.md  ChangeLog  FAQ.md  MANUAL.md  Makefile.am  NEWS  README  README.md  THANKS  change-release  configure.ac  prepClearRepCommit  prj.spec  reconf  renew-docu
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile.am  autoconf.html  automake.html  company-license.long  company-license.short  gtgt.html  gtgt.txt  index.html  libtool.html
scripts/: .cvsignore  Makefile.am  gcng  gptg  gscg
