# Copyright (C) 2000,2001 karsten reincke <reincke@fodina.de>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#  
# file <doc/Makefile.am> version <#4.1.0#> of project <gtgt>

gtgt_helpdir = $(datadir)/doc/gtgt/

gtgt_help_DATA = index.html gtgt.html gtgt.txt gtgt.gif \
	company-license.long \
	company-license.short \
	autoconf.html automake.html libtool.html
        
EXTRA_DIST = index.html gtgt.html gtgt.txt gtgt.gif \
	company-license.long \
	company-license.short \
	autoconf.html automake.html libtool.html
