# Copyright (C) 2001-2009 karsten reincke <karsten.reincke@fodina.de>
#  
# This file is part of of the software-project GTGT.
# 
# GTGT is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# GTGT is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# file <scripts/Makefile.am> version <#4.0.0#> of project <GTGT>

bin_SCRIPTS = gcng gscg gptg

#CLEANFILES = $(bin_SCRIPTS)
EXTRA_DIST = $(bin_SCRIPTS)

gcng:
	chmod ugo+x gcng  

gscg:
	chmod ugo+x gscg

gptg:
	chmod ugo+x gptg
	
